<resources>
    <string name="app_name">UberYard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in">Log In</string>
    <string name="enter_job_address">Enter Job Address...</string>
    <string name="address">Address: </string>
    <string name="requested_completion_date">Requested Completion Date:</string>
    <string name="enter_a_date">Enter a date...</string>
    <string name="job_type">Job Type</string>
    <string name="job_request">Job Request</string>
    <string name="request_job">Request Job</string>
    <string name="settings">Settings</string>
    <string name="billing">Billing</string>
</resources>
