<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item android:id="@+id/nav_login"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/log_in"/>
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_job_request"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/job_request" />
        <item
            android:id="@+id/nav_job_history"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Job History" />
        <item
            android:id="@+id/nav_job_statuses"
            android:icon="@drawable/ic_menu_manage"
            android:title="Job Statuses" />
    </group>

    <item android:title="User Information">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/settings" />
            <item
                android:id="@+id/nav_billing"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/billing" />
        </menu>
    </item>

</menu>
