<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_login"
        android:name="edu.rosehulman.uberyard.ui.login.LoginFragment"
        android:label="Login"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/nav_home"
        android:name="edu.rosehulman.uberyard.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_a_to_b"
            app:destination="@id/nav_login"
            app:popUpTo="@id/nav_home"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/nav_job_request"
        android:name="edu.rosehulman.uberyard.ui.jobrequest.JobRequestFragment"
        android:label="Job Request"
        tools:layout="@layout/fragment_job_request" />

    <fragment
        android:id="@+id/nav_job_history"
        android:name="edu.rosehulman.uberyard.ui.jobhistory.JobHistoryFragment"
        android:label="Job History"
        tools:layout="@layout/fragment_job_history" />

    <fragment
        android:id="@+id/nav_job_statuses"
        android:name="edu.rosehulman.uberyard.ui.jobstatuses.JobStatusesFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_job_statuses" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="edu.rosehulman.uberyard.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_billing"
        android:name="edu.rosehulman.uberyard.ui.billing.BillingFragment"
        android:label="@string/billing"
        tools:layout="@layout/fragment_billing" />
</navigation>